# kmMqtt

./: .gitignore  API_REFERENCE.md  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile.in  NOTICE  README.md  ReadMe.txt  TODO  addheader.bat  cpp.hint  vcpkg.json
.github/agents/: Documentation.agent.md
benchmarks/: CMakeLists.txt  Call_UniqueFunction.cpp  CpuCacheTests.cpp  Functor.h  PropertyDecoding.cpp  SBO_ByteBuffer.cpp  SBO_UniqueFunction.cpp  main.cpp
cmake/: options.cmake
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  EXAMPLES.md  FAQ.md  GETTING_STARTED.md  README.md  _base_packet_8h_source.html  _config_8h_source.html  _connection_status_8h_source.html  _default_dispatcher_8h_source.html  _disconnect_args_8h_source.html  _event_8h_source.html  _fixed_header_8h_source.html  _global_types_8h_source.html  _i_session_state_persistant_store_8h_source.html  _i_web_socket_8h_source.html  _locator_type_8h_source.html  _log_8h_source.html  _logger_instance_8h_source.html  _mqtt_client_events_8h_source.html  _mqtt_client_options_8h_source.html  _property_value_8h_source.html  _pub_ack_reason_code_8h_source.html  _pub_rec_reason_code_8h_source.html  _pub_rel_variable_header_8h_source.html  _publish_8h_source.html  _publish_payload_header_8h_source.html  _publish_variable_header_8h_source.html  _req_result_8h_source.html  _session_state_8h_source.html  _sub_ack_topic_reason_8h_source.html  _subscribe_8h_source.html  _subscribe_ack_8h_source.html  _subscribe_ack_variable_header_8h_source.html  _template_utils_8h_source.html  _un_sub_ack_topic_reason_8h_source.html  _un_subscribe_ack_8h_source.html  _utils_8h_source.html  classkm_mqtt_1_1_default_dispatcher.html  (+69 more)
docs/API/: _byte_buffer_8h_source.html  _client_error_8h_source.html  _client_error_code_8h_source.html  _connect_ack_8h_source.html  _connect_ack_variable_header_8h_source.html  _connect_address_8h_source.html  _connect_aknowledge_flags_8h_source.html  _connect_args_8h_source.html  _connect_flags_8h_source.html  _connect_payload_header_8h_source.html  _connect_reason_code_8h_source.html  _default_environment_factory_8h_source.html  _default_linux_env_8h_source.html  _default_websocket_8h_source.html  _disconnect_reason_code_8h_source.html  _disconnect_variable_header_8h_source.html  _encoded_publish_flags_8h_source.html  _error_codes_8h_source.html  _fixed_header_flags_8h_source.html  _flags_8h_source.html  _global_macros_8h_source.html  _i_callback_dispatcher_8h_source.html  _i_decode_header_8h_source.html  _i_mqtt_environment_8h_source.html  _immediate_dispatcher_8h_source.html  _message_container_8h_source.html  _mqtt_connection_info_8h_source.html  _mqtt_version_8h_source.html  _packet_type_8h_source.html  _packet_utils_8h_source.html  _payload_format_indicator_8h_source.html  _pending_un_subscription_8h_source.html  _ping_req_8h_source.html  _ping_resp_8h_source.html  _properties_8h_source.html  _property_type_8h_source.html  _pub_ack_variable_header_8h_source.html  _pub_comp_reason_code_8h_source.html  _pub_rec_variable_header_8h_source.html  _pub_rel_reason_code_8h_source.html  (+246 more)
docs/api/: _connect_8h_source.html  _connect_variable_header_8h_source.html  _data_types_8h_source.html  _default_logger_8h_source.html  _default_win_env_8h_source.html  _disconnect_8h_source.html  _i_encode_header_8h_source.html  _i_logger_8h_source.html  _message_container_data_8h_source.html  _mqtt_client_8h_source.html  _mqtt_client_impl_8h_source.html  _pending_subscription_8h_source.html  _pub_comp_variable_header_8h_source.html  _publish_ack_8h_source.html  _qos_8h_source.html  _send_result_data_8h_source.html  _topic_8h_source.html  _topic_aliases_8h_source.html  _un_sub_ack_reason_code_8h_source.html  _un_subscribe_options_8h_source.html  _windows_t_c_p_socket_8h_source.html  annotated.html  classkm_mqtt_1_1_default_websocket.html  (+69 more)
examples/: CMakeLists.txt
examples/adapters/websocket/: CMakeLists.txt
examples/adapters/websocket/include/: WinWebsocketAdapter.h
examples/adapters/websocket/src/: WinWebsocketAdapter.cpp
examples/cmake/: options.cmake
examples/mqttClient/: CMakeLists.txt
examples/mqttClient/include/mqttClient/: Fonts.h  MqttClientApp.h  Styles.h  Text.h  ViewHelpers.h
examples/mqttClient/include/mqttClient/Adapters/: CustomLogger.h
examples/mqttClient/include/mqttClient/Events/: ApplicationEvents.h  DirectEvent.h  Event.h  EventService.h
examples/mqttClient/include/mqttClient/Model/: ConfigModel.h  MessagesModel.h  OutputModel.h  PublishModel.h  SessionModel.h  SessionTabsModel.h  TopicsModel.h  ViewModel.h
examples/mqttClient/include/mqttClient/Views/: MessagesView.h  OutputView.h  PublishView.h  SessionTabsView.h  SessionView.h  TopicsView.h  View.h
examples/mqttClient/src/: MqttClientApp.cpp  main.cpp
examples/mqttClient/src/Adapters/: CustomLogger.cpp
examples/mqttClient/src/Events/: EventService.cpp
examples/mqttClient/src/Models/: MessagesModel.cpp  OutputModel.cpp  PublishModel.cpp  SessionModel.cpp  SessionTabsModel.cpp  TopicModel.cpp  TopicsModel.cpp
examples/mqttClient/src/Views/: MessagesView.cpp  OutputView.cpp  PublishView.cpp  SessionTabsView.cpp  SessionView.cpp  TopicsView.cpp
src/: MqttClient.cpp  Settings.cpp
tests/: BasePacketTests.cpp  ByteBufferTests.cpp  CMakeLists.txt  ClientErrorTests.cpp  ConnectAddressTests.cpp  ConnectPacketTests.cpp  DataTypesTests.cpp  DefaultEnvironmentTests.cpp  DeferrerTests.cpp  DispatcherTests.cpp  EventsTests.cpp  FlagsTests.cpp  HeaderTests.cpp  PacketComposerTests.cpp  PacketHelperTests.cpp  PacketIdsPoolTests.cpp  PacketParamsTests.cpp  PacketUtilsTests.cpp  PropertiesTests.cpp  ReqResultTests.cpp  SessionStateTests.cpp  TopicAliasesTests.cpp  UniqueFunctionTests.cpp  UtilsTests.cpp  main.cpp
tests/API Tests/: ConnectTests.cpp  DisconnectTests.cpp  Helpers.h  MockWebSocket.h  MqttClientOptions.cpp  MqttClientTests.cpp  PubAckTests.cpp  PublishRetryTests.cpp  PublishTests.cpp  ReceiveMaximumTests.cpp  SubscribeTests.cpp
tests/API Tests/Environments/: TestEnvironment.cpp  TestEnvironment.h
(+497 files in other folders)
